Prevent large tags overflow

--- a/_assets/css/components/card.scss
+++ b/_assets/css/components/card.scss
@@ -52,7 +52,6 @@
 
   a {
     @extend %link-grey;
-    white-space: nowrap;
   }
 
   svg {
